--- a/html-assignment/css/main.css
+++ b/html-assignment/css/main.css
@@ -1,3 +1,11 @@
 body {
     font-family: sans-serif;
 }
+body {
+    background-color: #e5989b;
+    padding: 75px;
+}
+div.wrapper {
+    background-color: #ffcdb2;
+    padding: 20px;
+}
