--- a/html-assignment/css/main.css
+++ b/html-assignment/css/main.css
@@ -5,12 +5,21 @@ body {
 }
 
 .wrapper {
-    width: 80%;
+    width: 90%;
     margin: auto;
     background-color: #ffcdb2;
 }
 
 header,footer {
     background-color: #B5838D;
+    text-align: center;
     padding: 10px;
+}
+
+article {
+    padding: 20px;
+}
+img {
+    display: block;
+    margin: auto;
 }
