--- a/html-assignment/css/main.css
+++ b/html-assignment/css/main.css
@@ -29,3 +29,14 @@ img {
     color: #343238;
 }
 
+#my-image {
+    box-shadow: 0px 0px 2px 1px black;
+}
+
+ul {
+    list-style: square;
+}
+
+li:nth-child(odd) {
+    background-color: #ffb4a2;
+}
