--- a/html-assignment/css/main.css
+++ b/html-assignment/css/main.css
@@ -13,7 +13,7 @@ body {
 header,footer {
     background-color: #B5838D;
     text-align: center;
-    padding: 10px;
+    padding: 15px;
 }
 
 article {
@@ -39,4 +39,18 @@ ul {
 
 li:nth-child(odd) {
     background-color: #ffb4a2;
+}
+
+nav a {
+    text-decoration: none;
+    background-color: #6d6875;
+    padding: 5px;
+    border: 1px solid #45424A;
+}
+
+a:link {
+    color: white;
+}
+a:visited {
+    color: #ffcdb2;
 }
