--- a/html-assignment/css/main.css
+++ b/html-assignment/css/main.css
@@ -1,5 +1,6 @@
 body {
     font-family: sans-serif;
+    font-size: 18px;
     color: #45424A;
     background-color: #e5989b;
 }
@@ -53,4 +54,10 @@ a:link {
 }
 a:visited {
     color: #ffcdb2;
+}
+a:hover {
+    color: #343238;
+}
+a:focus {
+    color: #e5989b;
 }
