fooling around with text positioning

--- a/midterm/css/main.css
+++ b/midterm/css/main.css
@@ -52,6 +52,7 @@ table {
 /* main size for reference later */
 html {
     font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
@@ -67,7 +68,15 @@ body {
     background-color: #D4E9E7;
 }
 
+/* making the first image reponsive within the wrapper */
 img#ls1 {
     width: 100%;
     height: auto;
+}
+
+header h1{
+    position: absolute;
+    left:50%;
+    transform: translate(-50%, 0);
+    top: 200px;
 }
