--- a/midterm/css/main.css
+++ b/midterm/css/main.css
@@ -86,3 +86,19 @@ img#ls2 {
     width: 125px;
 }
 
+
+h1 {
+    font-size: 1.95rem;
+    font-weight: 600;
+    text-align: center;
+}
+
+h2 {
+    font-size: 1.56rem;
+    font-weight: 500;
+}
+
+h3 {
+    font-size: 1.25rem;
+    font-weight: 500;
+}
