--- a/midterm/css/main.css
+++ b/midterm/css/main.css
@@ -83,10 +83,11 @@ img#ls1 {
 
 /* making the second image smaller and not crammed in the corner */
 img#ls2 {
-    width: 125px;
+    width: 135px;
     margin-top: 8px;
     margin-bottom: 8px;
     margin-right: 8px;
+    float: left;
 }
 
 
@@ -104,9 +105,45 @@ h2 {
 h3 {
     font-size: 1.25rem;
     font-weight: 500;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 nav {
     display: flex;
     justify-content: space-around;
+}
+
+ul {
+    list-style: disc;
+    margin-left: 30px;
+}
+
+.border {
+    border: 1px solid black;
+    padding: 10px;
+}
+
+input.long {
+    width: 100%;
+    box-sizing: border-box;
+    border-style: none;
+}
+
+textarea {
+    width: 100%;
+    box-sizing: border-box;
+    resize: none;
+    height: 60px;
+    border-style: none;
+}
+
+input, textarea {
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+footer {
+    margin: 20px;
+    text-align: right;
 }
