--- a/midterm/css/main.css
+++ b/midterm/css/main.css
@@ -80,14 +80,17 @@ img#ls1 {
     height: auto;
 }
 
-div.layers {
-    width: 100%;
-    height:max-content
+header h1 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding-top: 10%;
 }
 
 /* fiddling with the nav spacing and borders */
 nav a{
-    font-size: 1.56rem;
+    font-size: 1.25rem;
     font-weight: 500;
     text-decoration: none;
     width: 33.333333%;
