--- a/final-project/CSS/main.css
+++ b/final-project/CSS/main.css
@@ -65,20 +65,59 @@ body {
 
 header {
 	background-color: #222;
+	padding: 1rem 0;
 }
 
 .wrapper {
-	margin: 10px;
+	margin: 0 1rem;
+}
+
+nav {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 nav a {
 	color: #c78c06;
+	padding: 1.5rem 0;
 }
 
 .wtfbox {
 	background-color: #c78c06;
+	width: 100%;
+	padding: 1.5rem 0;
 }
 .wtfbox a {
 	color: #222;
 }
+.centerbox {
+	text-align: center;
+}
 
+.form1 {
+	display: flex;
+}
+.searchbutton {
+	background: none;
+	color:#c78c06;
+	border: 1px solid #c78c06;
+	font-size: 20px;
+	padding: .25rem;
+	width: 5%;
+}
+#search {
+	width: 95%;
+	padding: .5rem;
+}
+
+.himg {
+	width: 100%;
+}
+.fltbox {
+	background-color: rgb(34, 34, 34, 0.5);
+	position: absolute;
+}
+.flt1 {
+	position: relative;
+}
