--- a/final-project/CSS/main.css
+++ b/final-project/CSS/main.css
@@ -196,12 +196,70 @@ nav a {
 .svcbttn {
 	background-color:#222;
 	padding: 2rem;
-	width: 13rem;
+	width: 14rem;
 	text-align: center;
 }
 .svcbttn a:link,a:visited {
 	color: white;
 }
+
+.visimg {
+	width: 100%;
+	height: 18rem;
+	object-fit: cover;
+	object-position: center;
+}
+.vision h3 {
+	font-size: 2rem;
+	font-weight: 900;
+	margin: 1rem 0;
+}
+.vision {
+	position: relative;
+}
+.vis {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	margin-top: auto;
+	margin-bottom: auto;
+	height: 14rem;
+	color: white;
+}
+.vsnbttn {
+	background-color: rgb(34, 34, 34, 0.7);
+	width: 14rem;
+	padding: 2rem;
+	border: 1px solid #c78c06;
+	text-align: center;
+}
+.vision p {
+	margin-bottom: 1rem;
+}
+
+.teamdiv h2{
+	font-size: 3rem;
+	font-weight: 900;
+	margin: 1.5rem 0;
+}
+.team img {
+	width: 100%;
+	height: auto;
+}
+.team .tmdsc {
+	background-color: #ffe6ac;
+}
+
+
+
+
+
+
+
+
+
+
+
 
 
 
