messing around with desktop

--- a/final-project/CSS/main.css
+++ b/final-project/CSS/main.css
@@ -108,12 +108,12 @@ nav a {
 	padding: 1.5rem 0;
 }
 
-.wtfbox {
+.wtfbox, .centerbox{
 	background-color: #c78c06;
 	width: 100%;
 	padding: 1.5rem 0;
 }
-.wtfbox a {
+.centerbox a {
 	color: #222;
 }
 .centerbox {
@@ -333,7 +333,7 @@ footer a:link, footer a:visited {
 
 
 
-@media screen and (min-width: 700px) {
+@media screen and (min-width: 760px) {
 	.fltbox {
 		height: 28rem;
 	}
@@ -345,5 +345,44 @@ footer a:link, footer a:visited {
 	.fltbttn {
 		padding: 2rem;
 	}
+	.wtfbox {
+		width: 0;
+		padding: 0;
+	}
+	.centerbox {
+		background-color: #c78c06;
+		width: 8rem;
+		padding: 1.5rem;
+	}
+	nav {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+	}
 }
-@media screen and (min-width: )
+@media screen and (min-width: 900px) {
+	.wrapper {
+		max-width: 1200px;
+	}
+	.fltbox {
+		height: 36rem;
+		
+	}
+	.fltbox h1 {
+		font-size: 6rem;
+		margin-top: 5rem;
+	}
+}
+
+@media screen and (min-width: 1216px) {
+	.wrapper {
+		margin: 0 auto;
+	}
+	.fltbox {
+		left: 0;
+		right: 0;
+		margin-left: auto;
+		margin-right: auto;
+		width: 1228px;
+	}
+}
