--- a/final-project/CSS/main.css
+++ b/final-project/CSS/main.css
@@ -271,7 +271,8 @@ nav a {
 .contact #fullname,#email,#msg {
 	width: 100%;
 	height: 2rem;
-	border: 1px round #222;
+	border: 1px solid #222;
+	border-radius: .15rem;
 }
 .contact #msg {
 	height: 8rem;
@@ -323,7 +324,7 @@ footer a:link, footer a:visited {
 }
 
 .clearclass::after {
-	content: “”;
+	content: "";
 	display: block;
 	clear: both;
 }
